--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1172,12 +1172,16 @@ footer .footer-container .footer-links ul li a:hover {
   width: 100%;
   height: 100vh;
   position: fixed;
+  margin: 0;
+  padding: 0;
   top: 0;
   left: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  justify-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -1188,6 +1192,23 @@ footer .footer-container .footer-links ul li a:hover {
   overflow: hidden;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+}
+
+.load-page .load-page-container {
+  width: 100%;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  justify-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.load-page .load-page-container img {
+  width: 250px;
+  height: 250px;
 }
 
 @media screen and (min-width: 640px) {
