--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -693,13 +693,26 @@ footer {
   width: 100%;
   height: 100vh;
   position: fixed;
+  margin: 0;
+  padding: 0;
   top: 0;
   left: 0;
-  @include center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   @include bg(color-spotify-negro-hex );
   z-index: 99;
   overflow: hidden;
   box-sizing: border-box;
+  .load-page-container{
+    width: 100%;
+    height: auto;
+    @include center;
+    img{
+      width: 250px;
+      height: 250px;
+    }
+  }
 }
 
 //==========responsive desing sm	640px============
