--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -322,6 +322,8 @@ header .header-container .header-mobile-2 .nav-bar-container .nav-bar-menu ul li
   background-image: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
   background-color: #268a69;
   color: #ffffff;
+  -webkit-box-shadow: 0px 10px 15px -3px rgba(255, 255, 255, 0.1);
+          box-shadow: 0px 10px 15px -3px rgba(255, 255, 255, 0.1);
 }
 
 header .header-container .header-mobile-2 .nav-bar-container .nav-bar-menu ul li a:hover img {
