--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,6 +21,19 @@
   transition: all ease-in-out 0.3s;
 }
 
+* ::-moz-selection {
+  background-image: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
+  background-color: #191919;
+  color: #ffffff;
+}
+
+* ::selection {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.15)), to(rgba(255, 255, 255, 0)));
+  background-image: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
+  background-color: #191919;
+  color: #ffffff;
+}
+
 body {
   /*     width: 100%;
       height: 100vh; */
