--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -265,10 +265,14 @@ header.scroll-down {
 
     }
     .section-home-desc{
+      width: 100%;
       h1 {
+        width: 100%;
+        text-align: start;
         font-size: 45px;
       }
       p {
+        width: 100%;
         text-align: justify;
         font-size: 20px;
       }
