--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -154,8 +154,6 @@ header {
     
   }
 }
-
-
 //estilos de la flechita esa
 .btn-top {
   text-decoration: none;
@@ -1823,18 +1821,16 @@ footer {
 
   //=======section Home========
   .section-home {
+    overflow: hidden;
     /* background: red; */
     width: 100%;
     height: auto;
     @include center;
     .section-home-container {
       /* background: chartreuse; */
-      width: 1280px;
+      width: 100%;
       height: 980px;
-      @include flex-box(flex,center,null);
-      flex-direction: row;
       padding: 10px;
-
       box-sizing: border-box;
       .section-home-img {
         position: relative;
@@ -1848,13 +1844,16 @@ footer {
           width: 640px;
           height: 640px;
         }
+        img{
+          width: 640px;
+          height: 640px;
+        }
       }
       .section-home-desc {
         width: 640px;
         height: 640px;
         /* background: #1db954; */
-        @include flex-box(flex-box,null,center);
-        flex-direction: column;
+        @include center;
         padding: 10px;
         box-sizing: border-box;
         h1 {
@@ -1870,7 +1869,8 @@ footer {
   //======================
   //=======service style========
   .service {
-    //
+    width: 100%;
+    overflow: hidden;
     .service-bg {
       width: 100%;
       height: 100px;
@@ -1899,6 +1899,7 @@ footer {
     width: 100%;
     height: auto;
     @include center;
+    overflow: hidden;
     .servicio-container {
       width: 100%;
       max-width: 100%;
@@ -1987,6 +1988,7 @@ footer {
   .contacto {
     width: 100%;
     height: auto;
+    overflow: hidden;
     /* display: flex;
     justify-content: center; */
     @include flex-box(flex,null,center);
@@ -2093,7 +2095,7 @@ footer {
     @include beetween();
     box-sizing: border-box;
     box-shadow: 0px -5px 9px -3px rgba(0, 0, 0, 0.1);
-    /*===================*/
+    //footer copy
     .footer-copy {
       width: 100%;
       height: 50px;
@@ -2124,14 +2126,10 @@ footer {
         }
         h1 {
           @include text(color-spotify-verde-hex);
-          margin: 0;
-          padding: 0;
           font-size: map-get($text-size, medium);
         }
         p {
           @include text(color-spotify-blanco-hex);
-          margin: 0;
-          padding: 0;
           width: 200px;
           text-align: justify;
           font-size: map-get($text-size, small);
@@ -2142,11 +2140,13 @@ footer {
         width: calc(100% * 1);
         height: 250px;
         overflow: hidden;
-        @include center();
+        @include center;
+        flex-direction: row;
         ul {
-          @include flex-box(flex,null,null);
+          @include center;
+        flex-direction: row;
           li {
-            list-style: none;
+            
             a {
               @include center();
               margin: 10px;
