--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1366,6 +1366,10 @@ footer {
           width: 640px;
           height: 640px;
         }
+        img{
+          width: 640px;
+          height: 640px;
+        }
       }
       .section-home-desc {
         width: 640px;
