--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -676,6 +676,16 @@ header.scroll-down {
   width: 500px;
   height: 250px;
   overflow: hidden;
+  position: relative;
+}
+
+.plan-servicio .servicio-container .planes-container .plan-grid .plan-col .plan-img::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
 }
 
 .plan-servicio .servicio-container .planes-container .plan-grid .plan-col .plan-img img {
