--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -356,6 +356,15 @@ header.scroll-down {
             width: 500px;
             height: 250px;
             overflow: hidden;
+            position: relative;
+            &::before{
+              content: '';
+              position: absolute;
+              width: 100%;
+              height: 100%;
+              top: 0;
+              left: 0;
+            }
             img{
               width: 500px;
               height: 250px;
